# nlp_mini_project

./: .gitignore  01_build_dataset.py  02_clean_dataset_pipeline.py  03_prepare_training_data.py  04_train_bge.py  05_build_faiss.py  06_search.py  07_evaluate.py  08_build_dataset_llm.py  09_prepare_qa_data.py  10_train_qa.py  11_evaluate_qa.py  12_pipeline.py  13_evaluate_pipeline.py  README.md  pyproject.toml  results2.txt
Plans/: NLP_Mini_Project_Group21.pptx  NLP_Mini_Project_Group21_latest.pptx  Plan1.md  Walkthrough1.md  architecture.md  walkthrough2.md
Squad2.0/: 01_prepare_train_data.py  02_train_bge.py  03_build_faiss.py  04_search.py  05_evaluate.py
output2/: check_short.py  final_dataset.json  final_dataset10.json  final_dataset11.json  final_dataset12.json  final_dataset13.json  final_dataset14.json  final_dataset15.json  final_dataset16.json  final_dataset17.json  final_dataset18.json  final_dataset19.json  final_dataset2.json  final_dataset20.json  final_dataset21.json  final_dataset22.json  final_dataset23.json  final_dataset24.json  final_dataset25.json  final_dataset26.json  final_dataset27.json  final_dataset28.json  final_dataset29.json  final_dataset3.json  final_dataset30.json  final_dataset31.json  final_dataset32.json  final_dataset33.json  final_dataset34.json  final_dataset35.json  final_dataset36.json  final_dataset37.json  final_dataset38.json  final_dataset39.json  final_dataset4.json  final_dataset40.json  final_dataset41.json  final_dataset42.json  final_dataset43.json  final_dataset5.json  (+5 more)
utils/: download_qa_model.py  gpu_test.py  (+1 more)
