[project]
name = "semisagev2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.9.1",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.5.0",
    "accelerate>=1.7.0",
]
